[project]
name = "py_kms"
version = "0.1.0"
description = "Key Management Service for SSH keys in air-gapped environments"
authors = [
    {name = "Joe Aguirre"}
]
requires-python = ">=3.9.4"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi~=0.95.0",        
    "uvicorn[standard]~=0.21.0",
    "pydantic~=1.10.0",      
    "cryptography~=40.0.0",
    "python-multipart~=0.0.6", 
    "requests~=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.3.1",
    "pytest-cov~=4.1.0",
    "black~=23.3.0",
    "isort~=5.12.0",
    "mypy~=1.3.0",
    "ruff~=0.0.291",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # Line length is handled by black

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=py_kms --cov-report=xml"
testpaths = [
    "tests",
]

[project.urls]
"Homepage" = "https://github.com/TeemoTheYiffer/py_kms"
"Bug Tracker" = "https://github.com/TeemoTheYiffer/py_kms/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_kms"]